--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-router": "^0.11.6",
     "reflux": "^0.2.7",
     "react": "~0.12.2",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "superagent": "^1.2.0",
+    "superagent-prefix": "0.0.2",
+    "immutable": "^3.7.3"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
