--- a/package.json
+++ b/package.json
@@ -10,15 +10,30 @@
   "mainInput": "main",
   "mainOutput": "main",
   "dependencies": {
-    "react-router": "^0.11.6",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "react-bootstrap": "^0.23.7",
     "reflux": "^0.2.7",
-    "react": "~0.12.2",
-    "normalize.css": "~3.0.3",
+    "normalize.css": "^3.0.3",
     "superagent": "^1.2.0",
     "superagent-prefix": "0.0.2",
     "immutable": "^3.7.3",
     "rrule": "^2.1.0",
-    "moment": "^2.10.3"
+    "moment": "^2.10.3",
+    "karma-jasmine": "^0.1.5",
+    "grunt-contrib-copy": "^0.5.0",
+    "karma-chrome-launcher": "^0.1.12",
+    "karma-webpack": "^1.2.2",
+    "style-loader": "^0.8.3",
+    "grunt-contrib-connect": "^0.8.0",
+    "karma-phantomjs-launcher": "^0.1.4",
+    "grunt-karma": "^0.8.3",
+    "webpack": "^1.4.15",
+    "load-grunt-tasks": "^0.6.0",
+    "css-loader": "^0.9.1",
+    "babel-loader": "^4.3.0",
+    "babel": "^4.7.16",
+    "webpack-dev-server": "^1.6.6"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
